Correct alignment when we are not logged in

--- a/src/css/partials/_header.scss
+++ b/src/css/partials/_header.scss
@@ -56,6 +56,12 @@
 		&:hover, &:focus {
 			color: $brand-color-3;
 		}
+
+		.icon-login {
+			@include sm {
+				padding-top: 3px;
+			}
+		}
 	}
 
 	.lexicon-icon {
